- 2021-10-04: Switch to Alpine base image (reduces image size)
              Add support for Raspberry Pi Zero W
              Add support for Raspberry Pi Model B
- 2021-10-01: Update to AirConnect v0.2.51.1
- 2021-07-01: Update to AirConnect v0.2.50.5
- 2021-03-12: Update to AirConnect v0.2.50.1
              Remove custom binary in favour of using '--noflush' option
- 2021-01-15: Update to AirConnect v0.2.43.1
- 2021-01-13: Update to AirConnect v0.2.43.0
- 2020-12-16: Update to AirConnect v0.2.42.1
- 2020-12-13: Update to AirConnect v0.2.41.2
- 2020-12-10: Update to AirConnect v0.2.41.0
- 2020-12-07: Add 'ARTWORK' environment variable
- 2020-10-27: Update to AirConnect v0.2.28.3
- 2020-10-26: Supply options to aircast using environment variables
- 2020-10-24: Update to airupnp v0.2.28.1
- 2020-10-23: Update to airupnp v0.2.28.0
              Add support for setting MAX_PLAYERS (default=32)
- 2020-07-13: Simple experimental support for aircast inclusion
- 2020-06-06: Reduce default logging levels
- 2020-06-04: Add SUPPRESS_FLUSH option and customised binary
- 2020-05-28: Update to airupnp v0.2.26.1
- 2020-05-27: Update to airupnp v0.2.26.0
- 2020-05-05: Update to airupnp v0.2.25.0
- 2020-04-19: Add device model S15 to included players
- 2020-04-17: Update to airupnp v0.2.24.7
- 2020-04-07: Update to airupnp v0.2.24.6
- 2020-03-16: Update to airupnp v0.2.24.5
- 2020-03-07: Update to airupnp v0.2.24.4
- 2020-02-24: Update to airupnp v0.2.24.2
- 2020-02-11: Update to airupnp v0.2.24.1
- 2020-01-06: Update to airupnp v0.2.24.0
- 2020-01-04: Update to airupnp v0.2.23.0 (mDNS change)
- 2019-11-11: Update to AirConnect v0.2.22.1
              Use -o option so that _only_ specific Sonos devices are included
              Specify base image as Raspbian:Stretch
- 2019-10-05: Update to AirConnect v0.2.21.3
- 2019-09-30: Update to AirConnect v0.2.21.2
- 2019-09-18: Update to AirConnect v0.2.20.0
- 2019-08-31: Update to AirConnect v0.2.13.1